<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EduEye</string>

    <string name="action_exit">Exit</string>

    <string name="msg_access_local">Open at local: </string>
    <string name="msg_access_internet">Open at internet:  </string>
    <string name="msg_access_query">Detecting internet </string>
    <string name="msg_access_query_error">Also you can setup your router to access from internet</string>
    <string name="msg_error">Error: Please enable wifi</string>
    <string name="read_qr_code">Read QR-Code</string>
    <string name="connect_to_pc">Connect to PC with QR-code</string>
    <string name="connecting_to_wlan">Connecting to wlan</string>
    <string name="qrdescr">Scan QR-code -button</string>
    <string name="no_camera">No camera detected!</string>

    <string name="info_one">1. Download EduEye desktop client from www.edueye.net</string>
    <string name="info_two">2. Launch EduEye desktop and scan the QR-code with EduEye mobile client</string>
    <string name="back_button">Back</string>
    <string name="help_button">\?</string>
    

</resources>
